@@ -19,7 +19,6 @@
 package org.apache.pinot.integration.tests.custom;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableList;
 import java.io.File;
 import java.io.IOException;
 import java.nio.ByteBuffer;
@@ -91,7 +90,7 @@ public class ThetaSketchTest extends CustomDataQueryClusterIntegrationTest {
 
     // create avro schema
     org.apache.avro.Schema avroSchema = org.apache.avro.Schema.createRecord("myRecord", null, null, false);
-    avroSchema.setFields(ImmutableList.of(new org.apache.avro.Schema.Field(DIM_NAME, org.apache.avro.Schema.create(
+    avroSchema.setFields(List.of(new org.apache.avro.Schema.Field(DIM_NAME, org.apache.avro.Schema.create(
             org.apache.avro.Schema.Type.STRING), null, null),
         new org.apache.avro.Schema.Field(DIM_VALUE, org.apache.avro.Schema.create(org.apache.avro.Schema.Type.STRING),
             null, null),
